# ebtelplusplus

./: .cruft.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .zenodo.json  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  SConstruct  build_docs.py  deploy.sh  ebtel-2fl_functions.h  ebtel-2fl_functions_heating.c  ebtel-2fl_functions_loop.c  ebtel-2fl_functions_param.c  ebtel-2fl_functions_solvers.c  ebtel-2fl_functions_util.c  ebtel-2fl_main.c  ebtel-2fl_parameters.txt  makefile  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  deploy-docs.yml  tests.yml
analysis/routines/Python/: ebtel2fl_compare_alpha_dem.py  ebtel2fl_compare_dem.py  ebtel2fl_configure.py  ebtel2fl_configure_main.py  ebtel2fl_configure_runs.py  ebtel2fl_dem.py  ebtel2fl_dem_analysis.py  ebtel2fl_dem_analysis_main.py  ebtel2fl_monte_carlo_starter.py  ebtel2fl_multi_config_starter.py  ebtel2fl_plot.py  ebtel2fl_plot_em.py  ebtel2fl_run.py  ebtel2fl_run_main.py
analysis/routines/Python/electron_heating_runs/alphauniform/config/: ebtel2fl_L20.0_tn1000.xml  ebtel2fl_L20.0_tn1250.xml  ebtel2fl_L20.0_tn1500.xml  ebtel2fl_L20.0_tn1750.xml  ebtel2fl_L20.0_tn2000.xml  ebtel2fl_L20.0_tn2250.xml  ebtel2fl_L20.0_tn250.xml  ebtel2fl_L20.0_tn2500.xml  ebtel2fl_L20.0_tn2750.xml  ebtel2fl_L20.0_tn3000.xml  ebtel2fl_L20.0_tn3250.xml  ebtel2fl_L20.0_tn3500.xml  ebtel2fl_L20.0_tn3750.xml  ebtel2fl_L20.0_tn4000.xml  ebtel2fl_L20.0_tn4250.xml  ebtel2fl_L20.0_tn4500.xml  ebtel2fl_L20.0_tn4750.xml  ebtel2fl_L20.0_tn500.xml  ebtel2fl_L20.0_tn5000.xml  ebtel2fl_L20.0_tn750.xml
analysis/routines/Python/ion_heating_runs/alphauniform/config/: ebtel2fl_L20.0_tn1000.xml  ebtel2fl_L20.0_tn1250.xml  ebtel2fl_L20.0_tn1500.xml  ebtel2fl_L20.0_tn1750.xml  ebtel2fl_L20.0_tn2000.xml  ebtel2fl_L20.0_tn2250.xml  ebtel2fl_L20.0_tn250.xml  ebtel2fl_L20.0_tn2500.xml  ebtel2fl_L20.0_tn2750.xml  ebtel2fl_L20.0_tn3000.xml  ebtel2fl_L20.0_tn3250.xml  ebtel2fl_L20.0_tn3500.xml  ebtel2fl_L20.0_tn3750.xml  ebtel2fl_L20.0_tn4000.xml  ebtel2fl_L20.0_tn4250.xml  ebtel2fl_L20.0_tn4500.xml  ebtel2fl_L20.0_tn4750.xml  ebtel2fl_L20.0_tn500.xml  ebtel2fl_L20.0_tn5000.xml  ebtel2fl_L20.0_tn750.xml
config/: ebtel-2fl_config.xml  ebtel.example.cfg.xml  radiation.example.cfg.xml
docs/: Doxyfile  Makefile  bibliography.rst  comparison.rst  conf.py  development.rst  index.rst  mkdocs.yml  reference.rst  references.bib  xml_to_md.py
docs/examples/: ex2.py
docs/ext/: index.md
docs/mkdocs/: configuration.md  examples.md  index.md
docs/topic_guides/: comparison.rst  derivation.rst  index.rst
ebtelplusplus/: __init__.py  _low_level.py  high_level.py  models.py
ebtelplusplus/tests/: helpers.py  test_compare_hydrad.py  test_compare_idl.py  test_rad_loss.py  test_single_fluid.py  test_solver.py
ebtelplusplus/tests/data/: hydrad_electron_tau200.txt  hydrad_electron_tau500.txt  hydrad_ion_tau200.txt  hydrad_ion_tau500.txt  hydrad_single_tau200.txt  hydrad_single_tau500.txt
examples/: area_expansion.py  electron_single_event.py  ex1.py  ex2.py  ex3.py  ion_multi_event.py  plot.py  single_trapezoid_event.py  util.py
requirements/: requirements-all.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
source/: SConscript  build_python_bindings.sh  dem.cpp  dem.h  ebtel.cpp  ebtel.h  heater.cpp  heater.h  helper.h  loop.cpp  loop.h  main.cpp  observer.cpp  observer.h  pybind11_wrapper.cpp  solver.cpp  solver.h
source/util/: misc.cpp  misc.h  tinyxml2.h  xmlreader.cpp
src/: dem.h  ebtel-2fl_functions.h  ebtel-2fl_functions_heating.c  ebtel-2fl_functions_loop.c  ebtel-2fl_functions_param.c  ebtel-2fl_functions_solvers.c  ebtel-2fl_functions_util.c  ebtel-2fl_main.c  ebtel.cpp  helper.h  loop.cpp  loop.h  makefile  observer.cpp  xmlreader.h
src/ebtelplusplus/: __init__.py  high_level.py  models.py  util.py
src/ebtelplusplus/tests/: helpers.py  plot.py  test_compare_hydrad.py  test_compare_idl.py  test_new_return_types.py  test_rad_loss.py  test_single_fluid.py  test_solver.py  util.py
src/ebtelplusplus/tests/data/: hydrad_results.h5
test/: SConscript  __init__.py  main.cpp  run_tests.py  test.run  test_0_results_truth  test_0_results_truth.dem_corona  test_0_results_truth.dem_tr  test_1_results_truth  test_2_results_truth  test_2_results_truth.dem_corona  test_2_results_truth.dem_tr  test_3_results_truth  test_4_results_truth  test_5_results_truth  test_5_results_truth.dem_corona  test_5_results_truth.dem_tr
tests/: conftest.py  helpers.py  test_compare_hydrad.py  test_compare_idl.py  test_rad_loss.py  test_single_fluid.py  test_solver.py
tests/data/: idl_area_expansion_A_c=1_A_0=1_A_tr=1.json  idl_area_expansion_A_c=1_A_0=1_A_tr=1.txt  idl_area_expansion_A_c=3_A_0=1_A_tr=1.json  idl_area_expansion_A_c=3_A_0=1_A_tr=1.txt  idl_area_expansion_A_c=3_A_0=2_A_tr=1.json  idl_area_expansion_A_c=3_A_0=2_A_tr=1.txt  idl_single_event.json  idl_single_event.txt
